Fixed alignment of parameter values

--- a/styles/dealii-prm-tree.less
+++ b/styles/dealii-prm-tree.less
@@ -29,10 +29,11 @@
 
         #param {
             display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
         }
 
         #param #value {
-            width: 100%;
             text-align: right;
         }
     }
